Fixed vertical alignment issue by removing windowResize.js from grunt tasks

--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -23,7 +23,7 @@ body {
 }
 
 .content, .footer {
-    overflow: hidden;
+    /*overflow: hidden;*/
     max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
@@ -31,7 +31,7 @@ body {
 
 .content {
     margin-top: 30px;
-    min-width: 420px;
+    /*min-width: 420px;*/
 }
 
 .content .block {
@@ -67,9 +67,9 @@ body {
 }
 
 .footer {
-    padding: 0;
+    /*padding: 0;
     position: relative;
-    top: -10px;
+    top: -10px;*/
 }
 
 .footer>p {
