--- a/public/styles/welcome.css
+++ b/public/styles/welcome.css
@@ -1,6 +1,6 @@
 .welcome {
     margin-top: 50px;
-    margin-left: 7%;
+    margin-left: 2%;
     text-align: left;
 }
 
